@@ -5,14 +5,20 @@ import com.mojang.datafixers.util.Pair;
 import doggytalents.DoggyBlocks;
 import doggytalents.DoggyEntityTypes;
 import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
-import net.minecraft.data.loot.EntityLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
+import net.minecraft.data.loot.EntityLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.LootTableSubProvider;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
+import net.minecraft.world.level.storage.loot.LootTable.Builder;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.CopyNbtFunction;
@@ -21,42 +27,39 @@ import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.providers.nbt.ContextNbtProvider;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class DTLootTableProvider extends LootTableProvider {
 
-    public DTLootTableProvider(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
-    }
+    
 
-    @Override
-    public String getName() {
-        return "DoggyTalents LootTables";
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-                Pair.of(Blocks::new, LootContextParamSets.BLOCK),
-                Pair.of(Entities::new, LootContextParamSets.ENTITY)
-               );
+    public DTLootTableProvider(PackOutput p_254123_) {
+        super(p_254123_, Collections.emptySet(),
+            List.of(
+                new LootTableProvider.SubProviderEntry(Blocks::new, LootContextParamSets.BLOCK),
+                new LootTableProvider.SubProviderEntry(Entities::new, LootContextParamSets.ENTITY)
+            )  
+        );
     }
 
     @Override
     protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationTracker) {}
 
-    private static class Blocks extends BlockLoot {
+    private static class Blocks extends BlockLootSubProvider {
 
-        @Override
-        protected void addTables() {
-            dropsSelf(DoggyBlocks.DOG_BATH);
-            dropDogBed(DoggyBlocks.DOG_BED);
-            dropsSelf(DoggyBlocks.FOOD_BOWL); // Drop with the name of the dog bowl
+        private static final Set<Item> EXPLOSION_RESISTANT = Stream.of(DoggyBlocks.DOG_BED.get()).map(ItemLike::asItem).collect(Collectors.toSet());
+
+        protected Blocks() {
+            super(EXPLOSION_RESISTANT, FeatureFlagSet.of());
+            //TODO Auto-generated constructor stub
         }
 
         private void dropDogBed(Supplier<? extends Block> block) {
@@ -84,13 +87,19 @@ public class DTLootTableProvider extends LootTableProvider {
         protected Iterable<Block> getKnownBlocks() {
             return DoggyBlocks.BLOCKS.getEntries().stream().map(Supplier::get).collect(Collectors.toList());
         }
-    }
-
-    private static class Entities extends EntityLoot {
 
         @Override
-        protected void addTables() {
-            this.registerNoLoot(DoggyEntityTypes.DOG);
+        protected void generate() {
+            dropsSelf(DoggyBlocks.DOG_BATH);
+            dropDogBed(DoggyBlocks.DOG_BED);
+            dropsSelf(DoggyBlocks.FOOD_BOWL); // Drop with the name of the dog bowl
+        }
+    }
+
+    private static class Entities extends EntityLootSubProvider {
+
+        protected Entities() {
+            super(FeatureFlagSet.of());
         }
 
         protected void registerNoLoot(Supplier<? extends EntityType<?>> type) {
@@ -98,8 +107,13 @@ public class DTLootTableProvider extends LootTableProvider {
         }
 
         @Override
-        protected Iterable<EntityType<?>> getKnownEntities() {
-            return DoggyEntityTypes.ENTITIES.getEntries().stream().map(Supplier::get).collect(Collectors.toList());
+        protected java.util.stream.Stream<EntityType<?>> getKnownEntityTypes() {
+            return DoggyEntityTypes.ENTITIES.getEntries().stream().map(Supplier::get);
+        }
+
+        @Override
+        public void generate() {
+            this.registerNoLoot(DoggyEntityTypes.DOG);
         }
     }
 }
